Updated layout width horizontal elements to 0sp
Because wrap_content will cause size of element to change based on its content

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,21 +19,21 @@
 
             <TextView
                 android:id="@+id/timerView"
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@android:color/holo_orange_dark"/>
 
             <TextView
                 android:id="@+id/exprView"
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:background="@android:color/darker_gray"/>
 
             <TextView
                 android:id="@+id/scoreView"
-                android:layout_width="wrap_content"
+                android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@android:color/holo_orange_dark"/>
@@ -52,7 +52,7 @@
 
                 <TextView
                     android:id="@+id/solView1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0sp"
                     android:layout_height="match_parent"
                     android:layout_margin="5sp"
                     android:layout_weight="1"
@@ -60,7 +60,7 @@
 
                 <TextView
                     android:id="@+id/solView2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0sp"
                     android:layout_height="match_parent"
                     android:layout_margin="5sp"
                     android:layout_weight="1"
@@ -74,7 +74,7 @@
 
                 <TextView
                     android:id="@+id/solView3"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0sp"
                     android:layout_height="match_parent"
                     android:layout_margin="5sp"
                     android:layout_weight="1"
@@ -82,7 +82,7 @@
 
                 <TextView
                     android:id="@+id/solView4"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0sp"
                     android:layout_height="match_parent"
                     android:layout_margin="5sp"
                     android:layout_weight="1"
