--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,8 @@
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
+                android:textSize="36sp"
+                android:textAlignment="center"
                 android:background="@android:color/darker_gray"/>
 
             <TextView
@@ -38,6 +40,8 @@
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:textSize="24sp"
+                android:textAlignment="center"
                 android:background="@android:color/holo_orange_dark"/>
 
         </LinearLayout>
