--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
         </LinearLayout>
 
         <TableLayout
+            android:id="@+id/solTable"
             android:layout_width="match_parent"
             android:layout_height="200sp"
             android:layout_margin="10sp">
