--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,16 +23,16 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@android:color/holo_orange_dark"
-                android:textAlignment="center"
+                android:gravity="center"
                 android:textSize="36sp" />
 
             <TextView
                 android:id="@+id/exprView"
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
+                android:layout_weight="2"
                 android:background="@android:color/darker_gray"
-                android:textAlignment="center"
+                android:gravity="center"
                 android:textSize="36sp" />
 
             <TextView
@@ -41,8 +41,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@android:color/holo_orange_dark"
-                android:textAlignment="center"
-                android:textSize="24sp" />
+                android:gravity="center"
+                android:textSize="36sp" />
 
         </LinearLayout>
 
@@ -64,8 +64,8 @@
                     android:layout_margin="5sp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_green_light"
-                    android:textSize="48sp"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:textSize="48sp" />
 
                 <TextView
                     android:id="@+id/solView2"
@@ -74,8 +74,8 @@
                     android:layout_margin="5sp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_red_light"
-                    android:textSize="48sp"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:textSize="48sp" />
             </TableRow>
 
             <TableRow
@@ -90,8 +90,8 @@
                     android:layout_margin="5sp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_orange_light"
-                    android:textSize="48sp"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:textSize="48sp" />
 
                 <TextView
                     android:id="@+id/solView4"
@@ -100,8 +100,8 @@
                     android:layout_margin="5sp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_blue_dark"
-                    android:textSize="48sp"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:textSize="48sp" />
             </TableRow>
 
         </TableLayout>
