--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,9 @@
                     android:layout_margin="5sp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_green_light"
+                    android:clickable="true"
                     android:gravity="center"
+                    android:onClick="onSolutionAttempt"
                     android:textSize="48sp" />
 
                 <TextView
@@ -74,7 +76,9 @@
                     android:layout_margin="5sp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_red_light"
+                    android:clickable="true"
                     android:gravity="center"
+                    android:onClick="onSolutionAttempt"
                     android:textSize="48sp" />
             </TableRow>
 
@@ -90,7 +94,9 @@
                     android:layout_margin="5sp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_orange_light"
+                    android:clickable="true"
                     android:gravity="center"
+                    android:onClick="onSolutionAttempt"
                     android:textSize="48sp" />
 
                 <TextView
@@ -100,7 +106,9 @@
                     android:layout_margin="5sp"
                     android:layout_weight="1"
                     android:background="@android:color/holo_blue_dark"
+                    android:clickable="true"
                     android:gravity="center"
+                    android:onClick="onSolutionAttempt"
                     android:textSize="48sp" />
             </TableRow>
 
