Update status view text size

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,7 +118,9 @@
             android:id="@+id/statusView"
             android:layout_width="match_parent"
             android:layout_height="50sp"
-            android:background="@android:color/darker_gray" />
+            android:background="@android:color/darker_gray"
+            android:gravity="center"
+            android:textSize="36sp" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
